--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,3 +5,12 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = []
+
+[dependency-groups]
+dev = [
+    "mypy>=1.18.2",
+]
+
+[tool.mypy]
+python_version = "3.13"
+strict = true
