--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,3 +24,22 @@ jobs:
 
       - name: Run linting
         run: make lint-ci
+
+  docker-build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build Docker image (cacheable)
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: Dockerfile
+          push: false
+          tags: test-image:ci
+          cache-from: 'type=gha,scope=${{ github.workflow }}-docker'
+          cache-to: 'type=gha,scope=${{ github.workflow }}-docker,mode=max'
