--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,7 @@ jobs:
         run: make lint-ci
 
   docker-build:
+    needs: lint
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
